--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,31 +1,54 @@
+@defer () {
 <mat-drawer-container class="example-container" autosize>
   <mat-drawer #drawer mode="over">
     <nav>
       <a mat-button routerLink="info-card"><mat-icon>home</mat-icon>Home</a>
-      <a mat-button routerLink="info-card"><mat-icon>settings</mat-icon>Settings</a>
-      <a mat-button routerLink="info-card"><mat-icon>dashboard</mat-icon>Dashboard</a>
+      <a mat-button routerLink="info-card"
+        ><mat-icon>settings</mat-icon>Settings</a
+      >
+      <a mat-button routerLink="info-card"
+        ><mat-icon>dashboard</mat-icon>Dashboard</a
+      >
     </nav>
-
   </mat-drawer>
 
   <mat-toolbar color="">
     <span>Cardy</span>
     <!-- <a class="logo" mat-button routerLink="info-card">Cardy</a> -->
 
-    <button class="navSide" mat-icon-button aria-label="Example icon button with a open in new tab icon"
-      (click)="drawer.toggle()">
+    <button
+      class="navSide"
+      mat-icon-button
+      aria-label="Example icon button with a open in new tab icon"
+      (click)="drawer.toggle()"
+    >
       <mat-icon>menu</mat-icon>
     </button>
     <nav>
       <a mat-button routerLink="info-card"><mat-icon>home</mat-icon>Home</a>
-      <a mat-button routerLink="info-card"><mat-icon>settings</mat-icon>Settings</a>
-      <a mat-button routerLink="info-card"><mat-icon>dashboard</mat-icon>Dashboard</a>
-
+      <a mat-button routerLink="info-card"
+        ><mat-icon>settings</mat-icon>Settings</a
+      >
+      <a mat-button routerLink="info-card"
+        ><mat-icon>dashboard</mat-icon>Dashboard</a
+      >
     </nav>
-
-
   </mat-toolbar>
   <section class="container">
-    <app-info-card></app-info-card>
+    <ng-container *ngIf="data$ | async as user; else notFound">
+      @if (display === 'card') {
+
+      <app-info-card [data]="user" />
+      } @else if (display === 'setting') {
+
+      <app-settings-form *ngIf="user" />} @else {
+      <ng-container *ngTemplateOutlet="notFound" />
+      }
+    </ng-container>
   </section>
 </mat-drawer-container>
+<ng-container *ngIf="user$ | async"></ng-container>
+
+}
+
+<ng-template #notFound> 'not found' </ng-template>
